--- a/less/index.less
+++ b/less/index.less
@@ -1,4 +1,20 @@
 // Import your less files here:
+// The cascade matters!
+
+// Vars and Mixins
+@import "variables";
+@import "mixins";
+
+// General Styles Here
+@import "reset";
+@import "general-styles";
+
+// Components Here
+@import "header";
+@import "cta";
+@import "main-content";
+@import "contact";
+@import "footer";
 
 
 
