updated font size, header, footer, button, picture, and others

--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,5 @@
 // Import your less files here:
-// The cascade matters!
+// The cascade matters!<
 
 // Vars and Mixins
 @import "variables";
@@ -7,14 +7,50 @@
 
 // General Styles Here
 @import "reset";
-@import "general-styles";
+@import "global";
 
 // Components Here
-@import "header";
-@import "cta";
-@import "main-content";
-@import "contact";
+@import "navigation";
+.navone{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 20px;
+    
+}
+
+a{
+    text-decoration: none;
+    color: black;
+
+}
+h1{
+    display: flex;
+    justify-content: center; 
+    font-size: 40px;
+    margin: 30px;
+    background-color: lightgrey;
+
+}
 @import "footer";
+@import "home-page";
+
+ .btn{
+font-size: 27px;
+
+      margin: 100px  100px;
+      color:white;
+      background-color:black;
+      border-radius: 8px;
+      display: flex;
+      
+  
+}
+
+footer{
+    background-color: lightgrey;
+}
+ 
+
 
 
 
