--- a/less/index.less
+++ b/less/index.less
@@ -3,7 +3,35 @@
 
 // Vars and Mixins
 @import "variables";
+@phone:"(max-width: 500px)";
+
 @import "mixins";
+
+
+.navking(@display,@border-radius,){
+    display: @display;
+    border-radius: @border-radius;
+      
+      .navking(flex,8px,);
+  }
+
+.btnking(@color, @text-decoration){
+     color: @color;
+      text-decoration: @text-decoration;
+      .btnking(black, none)
+  }
+.center(){
+    display: flex;
+   
+ .center();
+}
+.width(){
+    width: 100%;
+
+    .width();
+}
+
+
 
 // General Styles Here
 @import "reset";
@@ -11,17 +39,27 @@
 
 // Components Here
 @import "navigation";
+
 .navone{
-    display: flex;
-    justify-content: space-evenly;
+   .center();
+   justify-content: space-evenly;
     font-size: 20px;
-    
+
+    @media @phone { 
+        display: flex;
+        flex-direction: space-evenly;
+        .width();
+       }
+
 }
 
-a{
-    text-decoration: none;
-    color: black;
-
+ .btn a{
+    
+    @media @phone { 
+        display: flex;
+        flex-direction: space-evenly;
+        width: 100%
+       }
 }
 h1{
     display: flex;
@@ -30,25 +68,45 @@ h1{
     margin: 30px;
     background-color: lightgrey;
 
+    
+
 }
 @import "footer";
+footer{
+    background-color: lightgrey;
+   @media @phone { 
+        display: flex;
+        flex-direction: center;
+        width: 100%
+       }
+
 @import "home-page";
 
- .btn{
-font-size: 27px;
-
+.navking .btn{
+      font-size: 27px;
       margin: 100px  100px;
       color:white;
       background-color:black;
-      border-radius: 8px;
-      display: flex;
+      
       
   
 }
-
-footer{
-    background-color: lightgrey;
+.btn:hover{
+background-color: teal;
 }
+
+    @media @phone { 
+        .walk{ display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    
+
+
+
+        
+    }
+
  
 
 
@@ -62,3 +120,4 @@ footer{
 
 
 
+}
