--- a/css/index.css
+++ b/css/index.css
@@ -165,9 +165,23 @@ p {
   justify-content: space-evenly;
   font-size: 20px;
 }
+@media "(max-width: 500px)" {
+  .navone {
+    display: flex;
+    flex-direction: space-evenly;
+    width: 100%;
+  }
+}
 a {
   text-decoration: none;
   color: black;
+}
+@media "(max-width: 500px)" {
+  a {
+    display: flex;
+    flex-direction: space-evenly;
+    width: 100%;
+  }
 }
 h1 {
   display: flex;
@@ -186,58 +200,68 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.home .intro h2 {
+footer {
+  background-color: lightgrey;
+}
+@media "(max-width: 500px)" {
+  footer {
+    display: flex;
+    flex-direction: center;
+    width: 100%;
+  }
+}
+footer .home .intro h2 {
   padding: 15px;
 }
-.home .intro p {
+footer .home .intro p {
   padding: 0 15px;
 }
-.home .space-images {
+footer .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
-.home .space-images img {
+footer .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
 }
-.home .visit-planets {
+footer .home .visit-planets {
   padding: 15px;
 }
-.home .visit-planets h3 {
+footer .home .visit-planets h3 {
   margin-top: 11px;
 }
-.home .visit-planets p {
+footer .home .visit-planets p {
   margin-top: 13px;
 }
-.home .walk {
+footer .home .walk {
   margin-top: 60px;
   border-top: 1px solid #dee2e6;
   padding: 50px 60px;
   display: flex;
   justify-content: center;
 }
-.home .walk .walk-text {
+footer .home .walk .walk-text {
   width: 50%;
 }
-.home .walk .walk-text h3 {
+footer .home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
-.home .walk .walk-text p {
+footer .home .walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-img {
+footer .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk .walk-img img {
+footer .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
 }
-.btn {
+footer .btn {
   font-size: 27px;
   margin: 100px  100px;
   color: white;
@@ -245,6 +269,10 @@ footer {
   border-radius: 8px;
   display: flex;
 }
-footer {
-  background-color: lightgrey;
+@media "(max-width: 500px)" {
+  footer .walk {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+  }
 }
