updated format of page

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,11 @@
-// Footer Styles
+// Footer Style
+footer{
+    background-color: lightgrey;
+    @media @phone { 
+         display: flex;
+         flex-direction: center;
+         width: 100%
+        }
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -8,4 +15,5 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
 }
