--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,19 @@
 // Mixins Here
+.navking(@display,@border-radius,){
+    display: @display;
+    border-radius: @border-radius;
+      
+      .navking(flex,8px,);
+  }
+
+.btnking(@color, @text-decoration){
+     color: @color;
+      text-decoration: @text-decoration;
+      .btnking(black, none)
+  }
+.center(){
+display: flex;
+}
+.width(){
+    width: 100%;
+}
