--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,10 @@ p {
   justify-content: space-evenly;
   font-size: 20px;
 }
+.navone a {
+  text-decoration: none!important;
+  color: #454A59 !important;
+}
 @media "(max-width: 500px)" {
   .navone {
     display: flex;
@@ -187,16 +191,6 @@ h1 {
   background-color: lightgrey;
 }
 footer {
-  color: #22283B;
-  background: #f4f4f4;
-  padding: 20px 0;
-  border: 1px double #e0e0e0;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-footer {
   background-color: lightgrey;
 }
 @media "(max-width: 500px)" {
@@ -206,68 +200,78 @@ footer {
     width: 100%;
   }
 }
-footer .home .intro h2 {
+footer footer {
+  color: #22283B;
+  background: #f4f4f4;
+  padding: 20px 0;
+  border: 1px double #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .intro h2 {
   padding: 15px;
 }
-footer .home .intro p {
+.home .intro p {
   padding: 0 15px;
 }
-footer .home .space-images {
+.home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
-footer .home .space-images img {
+.home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
-  border-radius: 20px;
+  border-radius: 20px!important;
   height: 100%;
 }
-footer .home .visit-planets {
+.home .visit-planets {
   padding: 15px;
 }
-footer .home .visit-planets h3 {
+.home .visit-planets h3 {
   margin-top: 11px;
 }
-footer .home .visit-planets p {
+.home .visit-planets p {
   margin-top: 13px;
 }
-footer .home .walk {
+.home .walk {
   margin-top: 60px;
   border-top: 1px solid #dee2e6;
   padding: 50px 60px;
   display: flex;
   justify-content: center;
 }
-footer .home .walk .walk-text {
+.home .walk .walk-text {
   width: 50%;
 }
-footer .home .walk .walk-text h3 {
+.home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
-footer .home .walk .walk-text p {
+.home .walk .walk-text p {
   margin-bottom: 26px;
 }
-footer .home .walk .walk-img {
+.home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-footer .home .walk .walk-img img {
+.home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
 }
-footer .navking .btn {
+.navking .btn {
   font-size: 27px;
   margin: 100px  100px;
   color: white;
   background-color: black;
 }
-footer .btn:hover {
+.btn:hover {
   background-color: teal;
 }
 @media "(max-width: 500px)" {
-  footer .walk {
+  .walk {
     display: flex;
     flex-direction: column-reverse;
     width: 100%;
