--- a/less/home-page.less
+++ b/less/home-page.less
@@ -22,7 +22,7 @@
     img {
       width: 28%;
       margin: 20px 2.5%;
-      border-radius: 20px;
+      border-radius: 20px!important;
       height: 100%;
     }
   }
@@ -72,3 +72,27 @@
     }
   }
 }// home
+.navking .btn{
+      font-size: 27px;
+      margin: 100px  100px;
+      color:white;
+      background-color:black;
+      
+      
+  
+}
+.btn:hover{
+background-color: teal;
+}
+
+    @media @phone { 
+        .walk{ display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    
+
+
+
+        
+    }
