updated the Button again

--- a/css/index.css
+++ b/css/index.css
@@ -192,15 +192,11 @@ h1 {
 }
 footer {
   background-color: lightgrey;
+  display: flex;
+  flex-direction: center;
+  width: 100%;
 }
-@media "(max-width: 500px)" {
-  footer {
-    display: flex;
-    flex-direction: center;
-    width: 100%;
-  }
-}
-footer footer {
+footer {
   color: #22283B;
   background: #f4f4f4;
   padding: 20px 0;
@@ -261,19 +257,13 @@ footer footer {
   height: auto;
   border-radius: 10px;
 }
-.navking .btn {
+.btn {
   font-size: 27px;
-  margin: 100px  100px;
+  margin: 100px 100px;
   color: white;
   background-color: black;
+  border-radius: 8px;
 }
 .btn:hover {
   background-color: teal;
-}
-@media "(max-width: 500px)" {
-  .walk {
-    display: flex;
-    flex-direction: column-reverse;
-    width: 100%;
-  }
 }
