--- a/less/home-page.less
+++ b/less/home-page.less
@@ -72,27 +72,30 @@
     }
   }
 }// home
-.navking .btn{
+ .btn {
       font-size: 27px;
-      margin: 100px  100px;
+      margin: 100px 100px;
       color:white;
       background-color:black;
+      border-radius: 8px;
       
-      
+ }
   
-}
+
 .btn:hover{
 background-color: teal;
-}
+     
 
-    @media @phone { 
-        .walk{ display: flex;
-        flex-direction: column-reverse;
-        width: 100%;
-    }
+
+ 
+
+ }
+        
+       
     
 
 
 
+
         
-    }
+  
