updated mobile section

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,33 +1,31 @@
 // Navigation code here
 .navone{
-    a{text-decoration: none!important;
-        color:#454A59!important;}
+    a{text-decoration: none;
+        color:#454A59;}
     
    .center();
    justify-content: space-evenly;
     font-size: 20px;
-
-    @media @phone { 
-        display: flex;
-        flex-direction: space-evenly;
-        .width();
-       }
-
-}
-
- .btn a{
     
     @media @phone { 
         display: flex;
-        flex-direction: space-evenly;
-        width: 100%
+        justify-content: space-evenly;
+        .width();
        }
-}
-h1{
-    display: flex;
-    justify-content: center; 
-    font-size: 40px;
-    margin: 30px;
-    background-color: lightgrey;
 
-}
+    }
+    .btn a{
+    
+        @media @phone { 
+            display: flex;
+            justify-content: center;
+            width: 100%
+           }
+    
+    
+           h1{
+            display: flex;
+            justify-content: center; 
+            
+           }
+        }
