--- a/css/index.css
+++ b/css/index.css
@@ -166,29 +166,26 @@ p {
   font-size: 20px;
 }
 .navone a {
-  text-decoration: none!important;
-  color: #454A59 !important;
+  text-decoration: none;
+  color: #454A59;
 }
-@media "(max-width: 500px)" {
+@media (max-width: 500px) {
   .navone {
     display: flex;
-    flex-direction: space-evenly;
+    justify-content: space-evenly;
     width: 100%;
   }
 }
-@media "(max-width: 500px)" {
+@media (max-width: 500px) {
   .btn a {
     display: flex;
-    flex-direction: space-evenly;
+    justify-content: center;
     width: 100%;
   }
 }
-h1 {
+.btn a h1 {
   display: flex;
   justify-content: center;
-  font-size: 40px;
-  margin: 30px;
-  background-color: lightgrey;
 }
 footer {
   background-color: lightgrey;
@@ -214,55 +211,80 @@ footer {
 }
 .home .space-images {
   display: flex;
-  flex-wrap: wrap;
   width: 100%;
 }
-.home .space-images img {
-  width: 28%;
-  margin: 20px 2.5%;
-  border-radius: 20px!important;
+@media (max-width: 500px) {
+  .home .space-images {
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
+.home img {
+  width: 100%;
+  margin: 20px 3%;
+  border-radius: 20px;
   height: 100%;
 }
-.home .visit-planets {
+.visit-planets {
   padding: 15px;
 }
-.home .visit-planets h3 {
+.visit-planets h3 {
   margin-top: 11px;
 }
-.home .visit-planets p {
+.visit-planets p {
   margin-top: 13px;
 }
-.home .walk {
-  margin-top: 60px;
+.walk {
+  margin-top: 50px;
   border-top: 1px solid #dee2e6;
-  padding: 50px 60px;
+  padding: 30px 30px;
   display: flex;
   justify-content: center;
 }
-.home .walk .walk-text {
-  width: 50%;
+@media (max-width: 500px) {
+  .walk {
+    width: 100%;
+    flex-direction: column-reverse;
+  }
 }
-.home .walk .walk-text h3 {
+.walk .walk-text {
+  width: 100%;
+}
+.walk .walk-text h3 {
   margin-bottom: 10px;
 }
-.home .walk .walk-text p {
+.walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-img {
-  width: 46%;
-  margin-left: 4%;
-}
-.home .walk .walk-img img {
+.walk .walk-img {
+  display: flex;
+  justify-content: left;
   width: 100%;
-  height: auto;
-  border-radius: 10px;
+  height: 100%;
+}
+@media (max-width: 500px) {
+  .walk .walk-img {
+    flex-direction: column-reverse;
+    width: 100%;
+    height: 100%;
+    margin: 20px 3%;
+    border-radius: 20px;
+  }
 }
 .btn {
-  font-size: 27px;
+  font-size: 14px;
   margin: 100px 100px;
   color: white;
   background-color: black;
-  border-radius: 8px;
+  border-radius: 4px;
+  width: 30%;
+  height: 8%;
 }
 .btn:hover {
   background-color: teal;
