--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,15 +16,30 @@
 
   .space-images {
     display: flex;
-    flex-wrap: wrap;
     width: 100%;
+    
+    
+    @media @phone{
+      flex-direction: column-reverse;
+      width: 100%;
+      
+      .sky{
+        display: none;
+      
+      }
+      .launch{
+        display: none;
+      }
 
-    img {
-      width: 28%;
-      margin: 20px 2.5%;
-      border-radius: 20px!important;
-      height: 100%;
     }
+  }
+
+  img {
+    width: 100%;
+    margin: 20px 3%;
+    border-radius: 20px;
+    height: 100%;
+  }
   }
 
   .visit-planets {
@@ -40,14 +55,20 @@
   }
 
   .walk {
-    margin-top: 60px;
+    margin-top: 50px;
     border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
+    padding: 30px 30px;
     display: flex;
     justify-content: center;
+    @media @phone{
+      width: 100%;
+    flex-direction: column-reverse;
+   
+    }
 
     .walk-text {
-      width: 50%;
+      width: 100%;
+      
 
       h3 {
         margin-bottom: 10px;
@@ -61,30 +82,47 @@
     }
 
     .walk-img {
-      width: 46%;
-      margin-left: 4%;
-      
-      img {
+    display: flex;
+    justify-content: left;
+    width: 100%;
+     height: 100%;
+      @media @phone{
+        flex-direction: column-reverse;
         width: 100%;
-        height: auto;
-        border-radius: 10px;
+        height: 100%;
+        margin: 20px 3%;
+        border-radius: 20px;
       }
+    
+       
+      
+          
+    
     }
-  }
-}// home
- .btn {
-      font-size: 27px;
+      
+      }
+    
+  
+// home
+ 
+.btn {
+      font-size: 14px;
       margin: 100px 100px;
       color:white;
       background-color:black;
-      border-radius: 8px;
+      border-radius: 4px;
+      width: 30%;
+      height: 8%;
+   
+      @media @phone{
       
+   }
  }
   
 
 .btn:hover{
 background-color: teal;
-     
+ 
 
 
  
@@ -97,5 +135,5 @@ background-color: teal;
 
 
 
-        
+
   
