--- a/css/index.css
+++ b/css/index.css
@@ -216,7 +216,7 @@ footer {
 @media (max-width: 500px) {
   .home .space-images {
     flex-direction: column-reverse;
-    width: 100%;
+    width: 95%;
   }
   .home .space-images .sky {
     display: none;
@@ -264,27 +264,33 @@ footer {
 }
 .walk .walk-img {
   display: flex;
-  justify-content: left;
+  justify-content: space-evenly;
   width: 100%;
   height: 100%;
 }
 @media (max-width: 500px) {
   .walk .walk-img {
     flex-direction: column-reverse;
-    width: 100%;
-    height: 100%;
-    margin: 20px 3%;
-    border-radius: 20px;
+    margin: 0px 0px 0px -20px;
+    display: flex;
+    justify-content: space-evenly;
+    width: 450px;
   }
 }
 .btn {
   font-size: 14px;
-  margin: 100px 100px;
+  margin: 20px 20px 20px 0px;
   color: white;
   background-color: black;
   border-radius: 4px;
   width: 30%;
   height: 8%;
+}
+@media (max-width: 500px) {
+  .btn {
+    margin: 1px 1px 1px 1px;
+    display: inline;
+  }
 }
 .btn:hover {
   background-color: teal;
