--- a/less/home-page.less
+++ b/less/home-page.less
@@ -21,7 +21,7 @@
     
     @media @phone{
       flex-direction: column-reverse;
-      width: 100%;
+      width: 95%;
       
       .sky{
         display: none;
@@ -83,17 +83,18 @@
 
     .walk-img {
     display: flex;
-    justify-content: left;
+    justify-content: space-evenly;
     width: 100%;
      height: 100%;
       @media @phone{
         flex-direction: column-reverse;
-        width: 100%;
-        height: 100%;
-        margin: 20px 3%;
-        border-radius: 20px;
+        margin: 0px 0px 0px -20px;
+        display: flex;
+        justify-content: space-evenly; 
+        width: 450px;
+
       }
-    
+  
        
       
           
@@ -107,7 +108,7 @@
  
 .btn {
       font-size: 14px;
-      margin: 100px 100px;
+      margin: 20px 20px 20px 0px;
       color:white;
       background-color:black;
       border-radius: 4px;
@@ -115,7 +116,9 @@
       height: 8%;
    
       @media @phone{
-      
+        margin: 1px 1px 1px 1px;
+        display: inline;
+
    }
  }
   
