--- a/css/index.css
+++ b/css/index.css
@@ -274,22 +274,26 @@ footer {
     margin: 0px 0px 0px -20px;
     display: flex;
     justify-content: space-evenly;
-    width: 450px;
+    width: 380px;
   }
 }
 .btn {
   font-size: 14px;
-  margin: 20px 20px 20px 0px;
+  margin: 20px 30px 20px 0px;
   color: white;
   background-color: black;
   border-radius: 4px;
   width: 30%;
   height: 8%;
+  display: flex;
+  justify-content: center;
 }
 @media (max-width: 500px) {
   .btn {
-    margin: 1px 1px 1px 1px;
-    display: inline;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
   }
 }
 .btn:hover {
