--- a/less/home-page.less
+++ b/less/home-page.less
@@ -91,8 +91,8 @@
         margin: 0px 0px 0px -20px;
         display: flex;
         justify-content: space-evenly; 
-        width: 450px;
-
+        width: 380px;
+        
       }
   
        
@@ -108,17 +108,20 @@
  
 .btn {
       font-size: 14px;
-      margin: 20px 20px 20px 0px;
+      margin: 20px 30px 20px 0px;
       color:white;
       background-color:black;
       border-radius: 4px;
       width: 30%;
       height: 8%;
+      display: flex;
+       justify-content: center;
    
       @media @phone{
-        margin: 1px 1px 1px 1px;
-        display: inline;
-
+       margin: 0 auto;
+       display: flex;
+       justify-content: space-evenly;
+       align-content: center;
    }
  }
   
