--- a/css/index.css
+++ b/css/index.css
@@ -292,8 +292,10 @@ footer {
   .btn {
     margin: 0 auto;
     display: flex;
-    justify-content: space-evenly;
-    align-content: center;
+    width: 400px;
+    height: 80px;
+    align-items: center;
+    font-size: 20px;
   }
 }
 .btn:hover {
