--- a/less/home-page.less
+++ b/less/home-page.less
@@ -115,13 +115,15 @@
       width: 30%;
       height: 8%;
       display: flex;
-       justify-content: center;
+      justify-content: center;
    
       @media @phone{
        margin: 0 auto;
        display: flex;
-       justify-content: space-evenly;
-       align-content: center;
+       width: 400px;
+       height: 80px;
+       align-items: center;
+      font-size: 20px;
    }
  }
   
