--- a/css/index.css
+++ b/css/index.css
@@ -193,6 +193,16 @@ footer {
   flex-direction: center;
   width: 100%;
 }
+@media (max-width: 500px) {
+  footer {
+    margin: 0 auto;
+    display: flex;
+    width: 400px;
+    height: 80px;
+    align-items: center;
+    font-size: 20px;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
