--- a/less/footer.less
+++ b/less/footer.less
@@ -3,8 +3,17 @@ footer{
     background-color: lightgrey;
       display: flex;
       flex-direction: center;
-      width: 100%
+      width: 100%;
       
+      @media @phone {
+        width: 400px;
+        margin: 0 auto;
+        display: flex;
+        width: 400px;
+        height: 80px;
+        align-items: center;
+       font-size: 20px;
+      }
      }
 footer {
   color: #22283B;
