--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,11 +2,11 @@
 .navone{
     a{text-decoration: none;
         color:#454A59;}
-    
-   .center();
-   justify-content: space-evenly;
+
+    .center();
+    justify-content: space-evenly;
     font-size: 20px;
-    
+
     @media @phone { 
         display: flex;
         justify-content: space-evenly;
@@ -24,8 +24,7 @@
     
     
            h1{
-            display: flex;
-            justify-content: center; 
-            
+           text-align: center;
+           
            }
         }
