updated header Nav

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,7 @@
 .navone{
     a{text-decoration: none;
         color:#454A59;}
+        margin: 40px;
 
     .center();
     justify-content: space-evenly;
@@ -20,11 +21,12 @@
             display: flex;
             justify-content: center;
             width: 100%
+
            }
     
     
            h1{
            text-align: center;
-           
+           position: fixed;
            }
         }
