--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,7 @@ p {
   margin: 0 auto;
 }
 .navone {
+  margin: 40px;
   display: flex;
   justify-content: space-evenly;
   font-size: 20px;
@@ -185,6 +186,7 @@ p {
 }
 .btn a h1 {
   text-align: center;
+  position: fixed;
 }
 footer {
   background-color: lightgrey;
