updated nav for mobile

--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,18 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+h1 {
+  text-align: center;
+  font-size: 40px;
+  background-color: lightgray;
+}
+@media (max-width: 500px) {
+  h1 {
+    text-align: center;
+    font-size: 40px;
+    background-color: lightgray;
+  }
+}
 .navone {
   margin: 40px;
   display: flex;
@@ -172,9 +184,7 @@ p {
 }
 @media (max-width: 500px) {
   .navone {
-    display: flex;
-    justify-content: space-evenly;
-    width: 50%;
+    Margin: 10px;
   }
 }
 @media (max-width: 500px) {
@@ -183,10 +193,6 @@ p {
     justify-content: center;
     width: 100%;
   }
-}
-.btn a h1 {
-  text-align: center;
-  position: fixed;
 }
 footer {
   background-color: lightgrey;
