--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,17 +1,25 @@
 // Navigation code here
+h1{
+    text-align:center;
+    font-size: 40px;
+    background-color: lightgray;
+  @media @phone{
+    text-align:center;
+    font-size: 40px;
+    background-color: lightgray;
+  }
+}
 .navone{
     a{text-decoration: none;
         color:#454A59;}
         margin: 40px;
-
     .center();
     justify-content: space-evenly;
     font-size: 20px;
 
     @media @phone { 
-        display: flex;
-        justify-content: space-evenly;
-        .width();
+       Margin: 10px;
+       
        }
 
     }
@@ -20,13 +28,12 @@
         @media @phone { 
             display: flex;
             justify-content: center;
-            width: 100%
-
+            width: 100%;
+            
            }
-    
-    
-           h1{
-           text-align: center;
-           position: fixed;
+          
+        
+           
+          
            }
-        }
+        
