--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,8 @@ h1{
     text-align:center;
     font-size: 40px;
     background-color: lightgray;
+    height: 85px;
+    
   @media @phone{
     text-align:center;
     font-size: 40px;
@@ -18,11 +20,13 @@ h1{
     font-size: 20px;
 
     @media @phone { 
-       Margin: 10px;
-       
+       Margin: 0px;
+       background-color: lightgray;
+       height: 40px;
+    }
        }
 
-    }
+    
     .btn a{
     
         @media @phone { 
